[package]
name = "hrelayer"
version = "0.1.1"
edition = "2024"
authors = ["404558965@qq.com"]
description = "hrelayer是http协议转发器"
license = "MIT"
documentation = "https://docs.rs/hrelayer"

[dependencies.config]
version = "0.15"

[dependencies.clap]
version = "4.5.40"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.tokio]
version = "1.44"
features = ["full"]

[dependencies.anyhow]
version = "1.0"

[dependencies.hyper]
version = "1.6"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-appender]
version = "0.2"

[dependencies.hrelay]
version = "0.4.5"
features = ["tracing"]

[dependencies.http-pool]
version = "0.7.3"
features = ["tracing"]

[dependencies.kinbox]
version = "0.1.2"

[dependencies.detcd]
version = "0.1.4"

[dependencies.net-relay]
version = "0.1.3"

[dependencies.quick-protobuf]
version = "0.8"

[dependencies.service-pool-util]
version = "0.1.1"

[dependencies.http-body-util]
version = "0.1"

